removed Unsafe usage